changed layout structure to use bootstrap grids. This approach completely solved prior issues with div behavior (table scrolls under tree, the table never jumps to the second row, etc). Fixes s #152, Fixes #153, Fixes #143

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -6,3 +6,7 @@ body, html {
 th, label, strong, b, .label {
   font-weight: 500 !important;
 }
+
+.col{
+	overflow:scroll;
+}
