--- a/src/styles/_graph.scss
+++ b/src/styles/_graph.scss
@@ -3,7 +3,7 @@ $node-color: #6f7373;
 $affected-node-color: #285880;
 
 #headersDIV {
-  position:fixed;
+  //position:fixed;
 }
 
 .node.affected .nodeIcon{
@@ -20,7 +20,7 @@ $affected-node-color: #285880;
 .well {
   padding-top: 0px;
   padding-bottom: 0px;
-  width: 500px;
+  //width: 500px;
 }
 .fixed_headers {
   font-size: 14px !important;
@@ -189,9 +189,14 @@ text.header{
   fill: #ececec
 }
 
-tr.selected{
-  background-color: rgba(255, 100, 0, 0.44) !important;
+tr.selected2{
+  background-color: rgba(158, 154, 200, 0.44) !important;
 }
+
+tr.selected{
+  background-color: rgba(150, 150, 150, 0.44) !important;
+}
+
 
 ////tr:nth-child(even) {background-color: #f2f2f2}
 tr:hover {background-color: #f5f5f5}
@@ -246,30 +251,6 @@ th.aes:after {
   width: 100%;
   height: 300px;
 }
-
-
-//.fixed_headers th,
-//.fixed_headers td {
-//  padding: 5px;
-//  text-align: left;
-//}
-//.fixed_headers td:nth-child(1),
-//.fixed_headers th:nth-child(1) {
-//  min-width: 60px;
-//}
-//.fixed_headers td:nth-child(2),
-//.fixed_headers th:nth-child(2) {
-//  min-width: 80px;
-//}
-//.fixed_headers td:nth-child(3),
-//.fixed_headers th:nth-child(3) {
-//  width: 80px;
-//}
-//
-//.fixed_headers td:nth-child(4),
-//.fixed_headers th:nth-child(4) {
-//  width: 80px;
-//}
 
 
 .fixed_headers thead tr {
